SERVER-9452 do not stop queries in god mode

Prior to this commit, there was no way to do an internal query on a node that was not in PRIMARY or SECONDARY state.
This ability is necessary for the Index Rebuilder, which runs at startup.